# scanovich-webUI

./: .env.example  .env.mws.local.example  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  FEATURE_MATRIX.md  Makefile  README.md  ROADMAP.md  bootstrap.env.example
apps/embedding_shim/: Dockerfile  main.py  pyproject.toml
apps/orchestrator/: Dockerfile  README.md  pyproject.toml
apps/orchestrator/gpthub_orchestrator/: __init__.py  classifier.py  clock_context.py  council.py  greeting_canned.py  image_gen.py  main.py  messages.py  model_registry.py  orchestrator_help.py  payload_log.py  pptx_gen.py  public_models.py  reasoning_response_filter.py  response_preamble_strip.py  role_prompts.py  router.py  semantic_classifier.py  settings.py  trace.py  webui_status.py
apps/orchestrator/tests/: conftest.py  test_build_defence_deck_pptx.py  test_classifier.py  test_classifier_greeting.py  test_classifier_pptx.py  test_classifier_summarization.py  test_clock_context.py  test_council.py  test_greeting_canned.py  test_health.py  test_help.py  test_image_gen.py  test_ingest_parts.py  test_ingest_pdf.py  test_ingest_richdoc.py  test_ingest_text.py  test_ingest_url.py  test_litellm_pptx_bench_aliases.py  test_main_fallback.py  test_main_pptx_short_circuit.py  test_memory_commands.py  test_memory_service.py  test_memory_store.py  test_model_registry.py  test_models_proxy.py  test_open_webui_uploads.py  test_payload_log.py  test_pptx_gen.py  test_pptx_module.py  test_readyz.py  test_reasoning_filter.py  test_response_preamble_strip.py  test_router.py  test_trace_extra.py  (+4 more)
(+83 files in other folders)
