[project]
name = "gpthub-orchestrator"
version = "0.1.0"
description = "Clean-shell orchestrator runtime"
readme = "README.md"
authors = [{ name = "Aleksandr Mordvinov" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "markitdown>=0.1.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=6.9.2",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpthub_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
